tests/models/enum/named/f64/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(min_items = 2)]
        value: f64
    },
}
fn main() {}
